# customer_segmentation

./: .gitignore  CLAUDE.md  CONFIG.sample.yaml  CONFIG.yaml  CONFIG_CSP.yaml  CONFIG_DCSP.yaml  CONFIG_GUIDE.md  LICENSE  README.md  UKPLC_Segmentation_Operations_Guide.md  create_scatter_and_distance_analysis.py  pyproject.toml
.claude/: settings.local.json
doc/: NEXT_RUNS_PLAN.md  comments_01.md  comments_02.md
out_01_continuous_hdbscan_local/: 01_CONFIGURATION_REPORT.md  01_cluster_vs_existing_segment.csv  01_internal_metrics.json  cluster_assignments.csv  cluster_profiles.csv
out_02_discretised_kmeans_local/: 02_CONFIGURATION_REPORT.md  02_explain.json  REPORT.md  cluster_vs_existing_segment.csv
out_03_continuous_hdbscan_azure/: 03_REPORT.md  03_internal_metrics.json  CONFIGURATION_REPORT.md  cluster_assignments.csv  cluster_profiles.csv  cluster_vs_existing_segment.csv  explain.json
out_04_continuous_kmeans_main/: COMPARATIVE_ANALYSIS_GUIDE.md  CONFIGURATION_REPORT.md  DISTANCE_ANALYSIS_SUMMARY.md  POWER_BI_SCATTER_GUIDE.md  REPORT.md  VISUALIZATION_GUIDE.md  cluster_assignments.csv  cluster_centers.csv  cluster_metadata.csv  cluster_profiles.csv  cluster_vs_existing_segment.csv  create_run04_comparative_visualizations.py  create_run04_visualizations.py  create_scatter_and_distance_analysis.py  customer_segmentation.code-workspace  explain.json  internal_metrics.json
out_04a_whiten/: REPORT.md  cluster_assignments.csv  cluster_centers.csv  cluster_metadata.csv  cluster_profiles.csv  cluster_vs_existing_segment.csv  explain.json  internal_metrics.json
out_04b_mbk_whiten/: REPORT.md  cluster_assignments.csv  cluster_centers.csv  cluster_metadata.csv  cluster_profiles.csv  cluster_vs_existing_segment.csv  explain.json  internal_metrics.json
out_05_continuous_mbkmeans_fast/: CONFIGURATION_REPORT.md  REPORT.md  cluster_assignments.csv  cluster_profiles.csv  cluster_vs_existing_segment.csv  explain.json  internal_metrics.json
out_06_discretised_svd_mbkmeans/: CONFIGURATION_REPORT.md  REPORT.md  cluster_assignments.csv  (+4 more)
(+19 files in other folders)
