
[project]
name = "ukplc-segmentation"
version = "0.2.0"
description = "Customer segmentation via clustering on performance features (Allianz UK PLC – Commercial)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Allianz UK – DataLab", email = "ukplc.datalab@example.com"}]
license = {text = "MIT"}
keywords = ["segmentation", "clustering", "insurance", "UKPLC", "CLTV", "HDBSCAN", "KMeans"]

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "matplotlib==3.8.4",
    "joblib==1.4.2",
    "pyyaml==6.0.2",
    "shap==0.46.0; python_version >= '3.8'",
    "hdbscan==0.8.38; python_version >= '3.8'"
]

[project.optional-dependencies]
mixed = ["kmodes==0.12.2"]

[project.scripts]
ukplc-seg = "ukplc_segmentation.run:main"
ukplc-seg-sweep = "ukplc_segmentation.sweep:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
